examples/graph/error/network/node.py
class Node:
    def __init__(self):
        self._edges: set[Edge] = []
